[package]
name = "reth-proofs-zkvm-zisk-guest"
version = "0.1.0"
edition = "2024"

# NOTE: We had to put it outside of the main workspace, to use different set of precompile patches.
[workspace]

# TODO: Experiment with different values to find the most optimal settings.
[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]

# Guest code.
reth-proofs-zkvm-common-guest = { path = "../../zkvm-common-guest", features = ["zkvm-zisk"] }

# zkVM.
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", branch = "fix/bls" }

# revm
revm = { version = "31.0.2", default-features = false, features = ["bn"] }

# Custom KZG acceleration.
kzg-rs = { git = "https://github.com/0xPolygonHermez/zisk-patch-kzg.git", branch = "fix/bls" }

[patch.crates-io]

# ZisK precompiles - copied from https://github.com/0xPolygonHermez/zisk-eth-client/blob/12720e34d0fcd5c3f638b90628bd5a2f53fb1b53/bin/client/rsp/Cargo.toml.
sha2 = { git = "https://github.com/0xPolygonHermez/zisk-patch-hashes.git", branch = "fix/bls" }
sha3 = { git = "https://github.com/0xPolygonHermez/zisk-patch-hashes.git", tag = "patch-sha3-0.10.8-zisk-0.14.0" }
k256 = { git = "https://github.com/0xPolygonHermez/zisk-patch-elliptic-curves.git", branch = "fix/bls" }
bn = { git = "https://github.com/0xPolygonHermez/zisk-patch-bn.git", branch = "fix/bls", package = "substrate-bn" }
sp1_bls12_381 = { git = "https://github.com/0xPolygonHermez/zisk-patch-bls12-381.git", branch = "fix/bls" }
ark-bls12-381 = { git = "https://github.com/0xPolygonHermez/zisk-patch-ark-algebra.git", branch = "fix/bls" }
ark-ec = { git = "https://github.com/0xPolygonHermez/zisk-patch-ark-algebra.git", branch = "fix/bls" }
ark-ff = { git = "https://github.com/0xPolygonHermez/zisk-patch-ark-algebra.git", branch = "fix/bls" }
ark-bn254 = { git = "https://github.com/0xPolygonHermez/zisk-patch-ark-algebra.git", branch = "fix/bls" }
ark-serialize  = { git = "https://github.com/0xPolygonHermez/zisk-patch-ark-algebra.git", branch = "fix/bls" }
