[package]
name = "reth-proofs-zkvm-risc0-guest"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
# zkVM.
risc0-zkvm = { version = "2.1.0", default-features = false, features = ["std", "unstable"] }

# reth
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false, features = ["evm"] }

# Reth Proofs
reth-proofs-core = { path = "../../../core" }

# Serialization.
bincode = { version = "1.3.3", default-features = false }

[patch.crates-io]
# First crucial Risc0 precompile - half of cycles reduced!
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
